fix overflow text

--- a/css/style.scss
+++ b/css/style.scss
@@ -25,6 +25,7 @@ main {
   background-color: rgba(50, 50, 50, 255);
 }
 #restOfStuff {
+  display: flex;
   flex-grow: 1;
 }
 .icon {
@@ -72,6 +73,7 @@ hr {
 }
 
 #theRest {
+  width: 10vw; //Can be any value below 100vw
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -104,16 +106,16 @@ hr {
   margin-left: 1em;
 }
 #textArea {
+  padding-top: 2em;
+  padding-bottom: 90vh;
   background-color: #1e1e1e;
-  width: 100%;
   flex-grow: 1;
-  overflow: auto;
+  overflow: hidden auto;
   height: 10vh; //Can be any value below 100vh
 }
 .editorLines {
   min-height: 1.3em;
   width: 100%;
-  max-width: 100%;
   display: flex;
 }
 
@@ -121,14 +123,16 @@ hr {
   color: #888;
 }
 .nambah {
+  text-align: right;
   display: inline-block;
   padding-left: 0.4em;
   /* background-color:#2a2a2a;*/
   width: 2em;
 }
 .editables {
+  width: 100%;
   display: inline-block;
-  margin: 0 0.5em;
+  margin: 0 1em;
   flex-grow: 1;
 }
 .editables:focus {
